test/fail_compilation/fail86.d
template Foo(TYPE) {}

void main() {
	alias Foo!(int) Foo;
}

